<?xml version="1.0" encoding="utf-8"?>  
<resources>  
    <string name="action_settings">something here</string>
    <string name="hello">Hello World, Date!</string>  
    <string name="app_name">WeVote</string>  
    <string name="strAccInputLabel">Username</string>  
    <string name="strPswInputLabel">Password</string>  
    <string name="login">Login</string>  
    <string name="change_pwd">New Pwd</string>
    <string name="new_vote">New Vote</string>
    <string name="new_vote_text"> <b> New Vote! </b> </string>
    <string name="title_text"> Title(within 30 chars): </string>
    <string name="description_text"> Description(within 250 chars): </string>
    <string name="duration_text"> Duration(hours): </string>
    <string name="done"> Done </string>
    <string name="cancel"> Cancel </string>
    <string name="save_password"> Save Password </string>
    <string name="log_off"> Log Off </string>
    <string name="comment"> ----------Comments------------------------ </string>
    <string name="option_1"> Option 1: </string>
    <string name="option_2"> Option 2: </string>
    <string name="option_3"> Option 3: </string>
    <string name="option_4"> Option 4: </string>
    <string name="option_5"> Option 5: </string>
    <string name="Refresh"> Refresh </string>
    <string name="BACK"> BACK </string>
    <string name="Choose"> Where to search </string>  
    <string-array name = "search_spinner">
        <item> ALL </item>
        <item> Title </item>
        <item> Description </item>
        <item> Name </item>
    </string-array>
</resources>  