<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/new_vote_text"
        android:textSize="24sp"
        android:gravity="center"
        android:ems="10" >
        <requestFocus />
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="5sp"
        android:text="@string/title_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="30"
        android:layout_gravity="right"
        android:padding="5sp"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="5sp"
        android:text="@string/duration_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_duration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_gravity="right"
        android:padding="5sp"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="5sp"
        android:text="@string/description_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:maxLength="255"
        android:singleLine="false"
        android:padding="5sp"
        android:textSize="20sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/option_1"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_option_one"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="5sp"
            android:maxLength="15"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/option_2"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_option_two"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="5sp"
            android:maxLength="15"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/option_3"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_option_three"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="5sp"
            android:maxLength="15"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/option_4"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_option_four"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="5sp"
            android:maxLength="15"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/option_5"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_option_five"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="5sp"
            android:maxLength="15"
            android:textSize="20sp" />
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        android:paddingRight="34sp" >
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:id="@+id/new_add"
            android:textSize="23sp"
            android:layout_gravity="right"
            android:text="@string/done"
            
            />
        
    </FrameLayout>

</LinearLayout>
